# MAZEGAME

./: CMakeLists.txt  README.md  collisions.cpp  glad.c  main.cpp  mazeGen.cpp  objects.cpp  post_processing.cpp  textures.cpp
Assets/WoodFloor051_4K-PNG/: WoodFloor051_4K-PNG.blend  WoodFloor051_4K-PNG.mtlx  WoodFloor051_4K-PNG.tres  WoodFloor051_4K-PNG.usdc
Headers/: camera.h  debug.h  entity.h  input.h  mazegen.h  objects.h  post_processing.h
Interface/: debug.cpp
Player/: input.cpp
Shaders/Dot/: dotFS.glsl
Shaders/Plane/: planeFS.glsl  planeVS.glsl
Shaders/Roof/: roofFS.glsl  roofVS.glsl
Shaders/Screen/: screenFS.glsl  screenFS_entityFlash.glsl
Shaders/Wall/: wallExitFs.glsl  wallFS.glsl  wallVs.glsl
World/: collisions.cpp  mazeGen.cpp  objects.cpp  textures.cpp
